--- a/Objects/物联网环境控制系统.build_log.htm
+++ b/Objects/物联网环境控制系统.build_log.htm
@@ -26,46 +26,9 @@ Project File Date:  03/25/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Development_Tool\Keil5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling startup_stm32f10x_md.s...
-compiling stm32f10x_adc.c...
-compiling stm32f10x_bkp.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_crc.c...
-compiling stm32f10x_exti.c...
-compiling misc.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_fsmc.c...
-compiling core_cm3.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_i2c.c...
-compiling esp8266_mqtt.c...
-compiling adc.c...
-compiling Keys.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_sdio.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_wwdg.c...
-compiling DHT11.c...
-compiling stm32f10x_usart.c...
-compiling stm32f10x_tim.c...
-compiling sys.c...
-compiling Lcd1602.c...
-compiling LM2904.c...
-compiling stm32f10x_it.c...
-compiling delay.c...
-compiling Serial.c...
-compiling main.c...
+Build target 'Target 1'
 linking...
-Program Size: Code=9412 RO-data=464 RW-data=24 ZI-data=1632  
+Program Size: Code=12206 RO-data=462 RW-data=28 ZI-data=1660  
 ".\Objects\物联网环境控制系统.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -80,7 +43,7 @@ Package Vendor: Keil
   D:\Development_Tool\Keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
