--- a/Objects/物联网环境控制系统.build_log.htm
+++ b/Objects/物联网环境控制系统.build_log.htm
@@ -27,9 +27,21 @@ Project File Date:  03/25/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Development_Tool\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling main.c...
+.\Hardware\PM25.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\Hardware\LY69.h(10): warning:  #1-D: last line of file ends without a newline
+  #endif
+User\main.c(79): warning:  #188-D: enumerated type mixed with another type
+                  g_state = (g_state + 1) % 3;
+User\main.c(85): warning:  #188-D: enumerated type mixed with another type
+                      g_select = (g_select + 1) % 3;
+User\main.c(201): warning:  #1-D: last line of file ends without a newline
+  }
+User\main.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=12206 RO-data=462 RW-data=28 ZI-data=1660  
-".\Objects\物联网环境控制系统.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=14426 RO-data=462 RW-data=40 ZI-data=1656  
+".\Objects\物联网环境控制系统.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -43,7 +55,7 @@ Package Vendor: Keil
   D:\Development_Tool\Keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
