--- a/Objects/物联网环境控制系统.build_log.htm
+++ b/Objects/物联网环境控制系统.build_log.htm
@@ -32,16 +32,18 @@ compiling main.c...
   #endif
 .\Hardware\LY69.h(10): warning:  #1-D: last line of file ends without a newline
   #endif
-User\main.c(79): warning:  #188-D: enumerated type mixed with another type
+.\Hardware\Beep.h(16): warning:  #1-D: last line of file ends without a newline
+  #endif
+User\main.c(81): warning:  #188-D: enumerated type mixed with another type
                   g_state = (g_state + 1) % 3;
-User\main.c(85): warning:  #188-D: enumerated type mixed with another type
+User\main.c(87): warning:  #188-D: enumerated type mixed with another type
                       g_select = (g_select + 1) % 3;
-User\main.c(201): warning:  #1-D: last line of file ends without a newline
+User\main.c(212): warning:  #1-D: last line of file ends without a newline
   }
-User\main.c: 5 warnings, 0 errors
+User\main.c: 6 warnings, 0 errors
 linking...
-Program Size: Code=14426 RO-data=462 RW-data=40 ZI-data=1656  
-".\Objects\物联网环境控制系统.axf" - 0 Error(s), 5 Warning(s).
+Program Size: Code=14618 RO-data=462 RW-data=40 ZI-data=1656  
+".\Objects\物联网环境控制系统.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -55,7 +57,7 @@ Package Vendor: Keil
   D:\Development_Tool\Keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
