可以连接阿里云服务器但是发送报文没回复

--- a/Objects/物联网环境控制系统.build_log.htm
+++ b/Objects/物联网环境控制系统.build_log.htm
@@ -22,34 +22,18 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\Development_Tool\Keil5\Project\物联网环境控制系统\物联网环境控制系统.uvprojx
-Project File Date:  03/26/2025
+Project File Date:  03/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Development_Tool\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
-.\Hardware\PM25.h(24): warning:  #1-D: last line of file ends without a newline
-  #endif
-.\Hardware\LY69.h(10): warning:  #1-D: last line of file ends without a newline
-  #endif
-.\Hardware\Beep.h(16): warning:  #1-D: last line of file ends without a newline
-  #endif
-User\main.c(271): warning:  #1-D: last line of file ends without a newline
+compiling Serial3.c...
+Hardware\Serial3.c(155): warning:  #1-D: last line of file ends without a newline
   }
-User\main.c(58): warning:  #177-D: variable "dht_buffer"  was declared but never referenced
-      uint8_t dht_buffer[5];
-User\main.c(59): warning:  #177-D: variable "temperature"  was declared but never referenced
-      float temperature, humidity;
-User\main.c(59): warning:  #177-D: variable "humidity"  was declared but never referenced
-      float temperature, humidity;
-User\main.c(60): warning:  #177-D: variable "noise_adc"  was declared but never referenced
-      uint16_t noise_adc;
-User\main.c(61): warning:  #177-D: variable "display_str"  was declared but never referenced
-      char display_str[16];
-User\main.c: 9 warnings, 0 errors
+Hardware\Serial3.c: 1 warning, 0 errors
 linking...
-Program Size: Code=23814 RO-data=886 RW-data=100 ZI-data=15996  
-".\Objects\物联网环境控制系统.axf" - 0 Error(s), 9 Warning(s).
+Program Size: Code=29234 RO-data=886 RW-data=112 ZI-data=15992  
+".\Objects\物联网环境控制系统.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
