--- a/Objects/物联网环境控制系统.build_log.htm
+++ b/Objects/物联网环境控制系统.build_log.htm
@@ -22,18 +22,44 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\Development_Tool\Keil5\Project\物联网环境控制系统\物联网环境控制系统.uvprojx
-Project File Date:  03/28/2025
+Project File Date:  03/29/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Development_Tool\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling Serial3.c...
-Hardware\Serial3.c(155): warning:  #1-D: last line of file ends without a newline
+compiling wifi.c...
+Hardware\usart3.h(30): warning:  #1-D: last line of file ends without a newline
+  #endif
+Hardware\wifi.c: 1 warning, 0 errors
+compiling main.c...
+.\Hardware\PM25.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\Hardware\LY69.h(10): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\Hardware\Beep.h(16): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\Hardware\usart3.h(30): warning:  #1-D: last line of file ends without a newline
+  #endif
+User\main.c(247): warning:  #1-D: last line of file ends without a newline
   }
-Hardware\Serial3.c: 1 warning, 0 errors
+User\main.c(66): warning:  #177-D: variable "dht_buffer"  was declared but never referenced
+      uint8_t dht_buffer[5];
+User\main.c(67): warning:  #177-D: variable "temperature"  was declared but never referenced
+      float temperature, humidity;
+User\main.c(67): warning:  #177-D: variable "humidity"  was declared but never referenced
+      float temperature, humidity;
+User\main.c(68): warning:  #177-D: variable "noise_adc"  was declared but never referenced
+      uint16_t noise_adc;
+User\main.c(69): warning:  #177-D: variable "display_str"  was declared but never referenced
+      char display_str[16];
+User\main.c: 10 warnings, 0 errors
+compiling mqtt.c...
+Hardware\usart3.h(30): warning:  #1-D: last line of file ends without a newline
+  #endif
+Hardware\mqtt.c: 1 warning, 0 errors
 linking...
-Program Size: Code=29234 RO-data=886 RW-data=112 ZI-data=15992  
-".\Objects\物联网环境控制系统.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=29258 RO-data=886 RW-data=124 ZI-data=19068  
+".\Objects\物联网环境控制系统.axf" - 0 Error(s), 12 Warning(s).
 
 <h2>Software Packages used:</h2>
 
